test/validation/stmt/test-assign-exp/p.pas
program test_assign_exp;
var i, j: integer;
begin
    (i + 5) := i + j + 5;
end.
