test/error/exp/arith/test-div-0/p.pas
program test_div_0;
const
    a = 5;
    b = 3;
var
    c: integer;
begin
    read(c);
    writeln(c div (a - b - 2));
end.
